# vela

./: .env.example  .gitignore  ARBORESCENCE.md  BACKLOG.md  FEATURES.md  README.md  STATE.md  TODO.md  install.sh  package.json  restart.sh  start.sh  stop.sh
docs/roadmap/: 01-fondations.md  02-recherche-savoir.md  03-dev.md  04-documents-texte.md  05-image.md  06-audio-video.md  07-ia-locale.md  08-securite-partage-automatisation.md  README.md
docs/testing/: 01.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: mcp-bridge.ts  vela-context.md
src-tauri/capabilities/: default.json
src-tauri/src/: actions.rs  advsearch.rs  analyze.rs  apps.rs  archive.rs  audio.rs  browser.rs  codeindex.rs  control.rs  convert.rs  dircmp.rs  disk.rs  download_job.rs  downloader.rs  favorites.rs  fs_ops.rs  gallery.rs  git.rs  imaging.rs  index.rs  integrity.rs  lib.rs  main.rs  media_probe.rs  ocr.rs  ops.rs  pdf.rs  places.rs  player.rs  profiles.rs  project.rs  replace.rs  share.rs  stems.rs  tags.rs  templates.rs  terminal.rs  thumbs.rs  translate.rs  video.rs  (+1 more)
src/components/: AdvancedSearch.tsx  ArchiveViewer.tsx  AudioPlayer.tsx  AudioStemsSection.tsx  AudioToolsPanel.tsx  BatchRenameModal.tsx  BgContextMenu.tsx  BrowserView.tsx  CodeSearchModal.tsx  CommandPalette.tsx  CompressModal.tsx  ConfirmModal.tsx  ConflictModal.tsx  ContextMenu.tsx  ContextMenus.tsx  DialogHost.tsx  DiffViewer.tsx  DirCompareViewer.tsx  DiskAnalyzer.tsx  DownloadModal.tsx  Editor.tsx  EditorArea.tsx  ExtractConflictModal.tsx  ExtractionPanel.tsx  FeatureOverlays.tsx  FileGrid.tsx  FileIcon.tsx  FileList.tsx  FileTable.tsx  FileTile.tsx  FileTree.tsx  FindReplace.tsx  FloatingMenu.tsx  GitPanel.tsx  HashModal.tsx  HexViewer.tsx  ImageAnnotate.tsx  ImageBatch.tsx  ImageToolsPanel.tsx  InputModal.tsx  (+34 more)
src/hooks/: use-download.ts  useAppearance.ts  useBrowser.ts  useCommandPalette.ts  useCommandRegistry.ts  useEditorTabs.ts  useExtractions.ts  useFavorites.ts  useFileActions.ts  useFileContent.ts  useFileManager.ts  useFolderTabs.ts  useGitStatus.ts  useGridNav.ts  useHoverPreview.ts  useInstallPrompt.ts  useKeyboard.ts  useMenuPosition.ts  useNlSettings.ts  useOcrJobs.ts  usePane.ts  useProfiles.ts  useProject.ts  useSearch.ts  useSmartSearches.ts  useSort.ts  useTags.ts  useTerminals.ts  useThumbnail.ts  useTransfers.ts  useUndo.ts  useWorkspaces.ts
src/services/: actions.ts  advsearch.ts  (+32 more)
