[package]
name = "vela"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vela_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
mime_guess = "2"
zip = "2"
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
xz2 = "0.1"
trash = "5"
walkdir = "2"
notify = "6"
image = "0.25"
portable-pty = "0.9.0"
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"

